<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowBook" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookTitle"
        android:layout_below="@+id/bookTitle"
        android:layout_marginTop="16dp"
        android:text="@string/author" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookAuthor"
        android:layout_below="@+id/bookAuthor"
        android:layout_marginTop="16dp"
        android:text="@string/isbn" />

    <TextView
        android:id="@+id/bookIsbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />    

    <Button
        android:id="@+id/editBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookIsbn"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/bookIsbn"
        android:layout_marginTop="60dp"
        android:text="@string/editBook" />
    
    <Button
        android:id="@+id/deleteBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editBook"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editBook"
        android:layout_marginTop="60dp"
        android:background="@color/red_light"
        android:drawableLeft="@drawable/ic_action_discard"
        android:drawableRight="@drawable/ic_action_discard"
        android:text="@string/deleteBook" />
    
    <Button
        android:id="@+id/showBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deleteBook"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/deleteBook"
        android:layout_marginTop="80dp"
        android:text="@string/showBooks" />

</RelativeLayout>